minesweeper preventing highlighting on mobile long press

--- a/minesweeper/style.css
+++ b/minesweeper/style.css
@@ -24,7 +24,14 @@ body {
 	/*width: 100%;
 	height: 100%;*/
 
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 
 	background-color: #333;
 	color: #fff;
